<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!--  BluetoothChat -->
    <string name="send">Welcome</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>

    <string name="MyTextMatches">Text Matches</string>
    <string name="sNoOfMatches">No of Matches</string>
    <string name="etSearchHint">Speech hint here</string>
    <string name="Priorite_Message">Une voiture d\'urgence demande la priorité. Nous vous prions de lui céder le passage. Merci !  </string>
    <string name="Depassement_Message">Le véhicule derrière vous désire effectuer un depassement. Prière de rester sur votre voie</string>
    <string name="arrivee_text">Destination</string>
    <string name="depart">Point de départ</string>
    <string name="veuillez_choisir_votre_itin_raire">Veuillez choisir votre itinéraire</string>
    <string name="Bvalider">Valider</string>
    <string name="Bannuler">Annuler</string>
    <string name="parcours">Parcours</string>

    <string-array name="Parcours">
        <item>" "</item>
        <item>Technopole ---> Vali Hir ---> Recouvrance</item>
        <item>Technolopole ---> Fort Montbarey ---> Recouvrance</item>
        <item>Plouzane Mairie ---> Commerce ---> SIAM </item>
        <item>Plouzane Mairie ---> Commerce ---> Fort Monbarey ---> SIAM</item>
        <item>De A ---> F ---> G ---> D</item>
        <item>De A ---> F ---> G ---> D </item>
        <item>De B ---> F ---> G ---> D ---> E</item>
    </string-array>

    <string-array name="DestinationArrivee">
        <item>" "</item>
        <item>Recouvrance </item>
        <item>SIAM</item>
        <item>D</item>
        <item>E</item>
    </string-array>

    <string-array name="DestinationDepart">
        <item>" "</item>
        <item>Technopôle</item>
        <item>Plouzane Mairie</item>
        <item>A</item>
        <item>B</item>
    </string-array>

</resources>
